# gc2_bot

./: README.md
gc2_turtlebot_ws/src/gc2_turtlebot_demo/: CMakeLists.txt  package.xml
gc2_turtlebot_ws/src/gc2_turtlebot_demo/include/: gc2_turtlebot_demo.h
gc2_turtlebot_ws/src/gc2_turtlebot_demo/launch/: demo.launch
gc2_turtlebot_ws/src/gc2_turtlebot_demo/src/: gc2_turtlebot_demo.cpp  main.cpp
gc2_turtlebot_ws/src/gc2_turtlebot_node/: CMakeLists.txt  package.xml
gc2_turtlebot_ws/src/gc2_turtlebot_node/launch/: minimal.launch
scripts/: kobuki_install.sh
