<?xml version="1.0"?>
<package format="2">
  <name>gc2_turtlebot_demo</name>
  <version>0.0.0</version>
  <description>The gc2_turtlebot_demo package</description>

  <maintainer email="niels@todo.todo">niels</maintainer>


  <license>TODO</license>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kobuki_node</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>kobuki_node</build_export_depend>
  <build_export_depend>kobuki_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
