<?xml version="1.0"?>
<package format="2">
  <name>gc2_turtlebot_node</name>
  <version>0.0.1</version>
  <description>The gc2_turtlebot_node package</description>

  <license>TODO</license>

  <maintainer email="niels.balemans@uantwerpen.be">Niels Balemans</maintainer>
  <author email="niels.balemans@uantwerpen.be">Niels Balemans</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urg_node</build_depend>
  <build_depend>kobuki_node</build_depend>
  <build_depend>realsense2_camera</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>urg_node</build_export_depend>
  <build_export_depend>kobuki_node</build_export_depend>
  <build_export_depend>realsense2_camera</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
